fix: se suben cambios de estilos para el mapa

--- a/src/app/map/map.component.html
+++ b/src/app/map/map.component.html
@@ -1,6 +1,15 @@
-<div class="map-container">
-  <div class="map-frame">
-    <a routerLink="/history">Ver historial</a>
-    <div id="map"></div>
+<div class="container">
+  <nav class="navbar navbar-light bg-light mt-5">
+    <div class="container-fluid">
+      <a class="navbar-brand">Mapa de humedad</a>
+      <form class="d-flex">
+        <a class="btn btn-outline-info" routerLink="/history">Ver historial</a>
+      </form>
+    </div>
+  </nav>
+  <div class="mt-3">
+    <div class="map-frame">
+      <div id="map"></div>
+    </div>
   </div>
 </div>
