--- a/src/app/data-history/data-history.component.html
+++ b/src/app/data-history/data-history.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="card text-center">
+  <div class="card text-center mt-5">
     <div class="card-header">
       <h2>Historial de humedad</h2>
     </div>
